spacing fix in mobile

--- a/assets/scss/structure/infographic/_timeline.scss
+++ b/assets/scss/structure/infographic/_timeline.scss
@@ -54,7 +54,7 @@
 		    color:$warm-grey-light;
 		    font-size: ms(7);
 		    position:absolute;
-			top:-120px;
+			top:-100px;
 		    left:21px;
 		    @include bp(md){
 		    	left:50%;
