--- a/docs/assets/css/index.css
+++ b/docs/assets/css/index.css
@@ -10460,7 +10460,7 @@ address.vcard {
   color: #d6d4d4;
   font-size: 32px;
   position: absolute;
-  top: -120px;
+  top: -100px;
   left: 21px; }
   @media only screen and (min-width: 768px) {
     .infographic.timeline .node + .node:before {
